--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -6,11 +6,19 @@ body {
 h1 {
     font-family: 'Shrikhand', cursive;
 }
-h2, h4 {
+h2, h4, .accueil {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
 }
-h3 {
-    font-family: 'Roboto', sans-serif;
+h2, .accueil {
+    font-size: 2.3em;
+    margin-top: 3vh;
+    margin-bottom: 2vh;
+}
+.h2__page {
+    font-weight: normal;
     text-transform: uppercase;
+}
+p {
+    font-size: 1em;
 }
