--- a/components/_button.scss
+++ b/components/_button.scss
@@ -1,12 +1,18 @@
 .button{
     margin: 4vh 0;
-    padding: 17px 23px;
+    padding: 15px 23px;
     font-size: 1.7em;
     border-radius: 27px;
     color: white;
     @include shadow;
     text-align: center;
-    @include gradient;   
+    @include gradient;
+    &__page {
+        width: 200px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: $grey;
+    }  
     &:hover {
         background: linear-gradient(
           356deg,
