--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -6,6 +6,9 @@ body {
 h1 {
     font-family: 'Shrikhand', cursive;
 }
+.pagemenu__h1 {
+    font-size: 2.7em;
+}
 h2, h4, .accueil {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
@@ -14,10 +17,6 @@ h2, .accueil {
     font-size: 2.3em;
     margin-top: 3vh;
     margin-bottom: 2vh;
-}
-.h2__page {
-    font-weight: normal;
-    text-transform: uppercase;
 }
 p {
     font-size: 1em;
