--- a/components/_card.scss
+++ b/components/_card.scss
@@ -38,6 +38,12 @@
     height: 50vw; 
     object-fit: cover;
     object-position: bottom;
+    &__page {
+        overflow: hidden;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        width: 100%;
+    }
 }
 .top {
     border-top-left-radius: 15px;
@@ -46,10 +52,28 @@
     height: 50vw; 
     object-fit: cover;
     object-position: 0% 60%;
+    &__page {
+        object-fit: cover;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        width: 100%;
+        height: 40vh;
+    }
 }
 .fa-heart {
     padding-top: 1vh;
-    padding-right: 35px;    
+    padding-right: 35px;
+    &__page { 
+        position: relative;
+        top: 4px;
+        &::before {
+            position: absolute;
+            right: 35px;
+        }
+        &::after {
+            position: absolute;
+        }        
+    }     
     &:hover {
         &::after {
             opacity: 1;
@@ -65,14 +89,15 @@
         opacity: 0;
         content: "\f004";
         font-weight: bold;
-        background: linear-gradient(189deg, $primary-color 15%, $secondary-color 43%);
+        background: linear-gradient(189deg, $primary-color 20%, $secondary-color 80%);
         -webkit-background-clip: text;
         background-clip: text;
-        -webkit-text-fill-color: transparent;              
+        -webkit-text-fill-color: transparent;             
     }
     &::before {
         transition: opacity 600ms ease-in-out;
     }
+    
 }
 .card h4 {
     font-size: 1.9em;
