--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -6,7 +6,7 @@ $grey: #eaeaea;
 $middle-grey: rgba(53,53,53,0.3);
 $dark-grey: #353535;
 $gradient: $primary-color, $secondary-color;
-$mob: "only screen and (max-width: 760px)";
-$tab: "only screen and (min-width: 761px)";
-$tabgrand: "only screen and (min-width: 900px)";
+$mobgrand: "only screen and (min-width: 460px)";
+$tab: "only screen and (min-width: 660px)";
+$tabgrand: "only screen and (min-width: 850px)";
 $screen: "only screen and (min-width: 1200px)";
