--- a/style.css
+++ b/style.css
@@ -93,67 +93,85 @@
 
 @-webkit-keyframes slide-in-right {
   0% {
-    -webkit-transform: scaleX(0) translateX(0);
-            transform: scaleX(0) translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
     opacity: 0;
   }
   100% {
-    -webkit-transform: scaleX(1) translateX(-17vw);
-            transform: scaleX(1) translateX(-17vw);
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
     opacity: 1;
   }
 }
 
 @keyframes slide-in-right {
   0% {
-    -webkit-transform: scaleX(0) translateX(0);
-            transform: scaleX(0) translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
     opacity: 0;
   }
   100% {
-    -webkit-transform: scaleX(1) translateX(-17vw);
-            transform: scaleX(1) translateX(-17vw);
+    -webkit-transform: translateX(-60px);
+            transform: translateX(-60px);
     opacity: 1;
   }
 }
 
-@-webkit-keyframes marge {
+@-webkit-keyframes pad {
   0% {
-    margin-right: 0vw;
+    padding-right: 0px;
   }
   100% {
-    margin-right: 14vw;
+    padding-right: 60px;
   }
 }
 
-@keyframes marge {
+@keyframes pad {
   0% {
-    margin-right: 0vw;
+    padding-right: 0px;
   }
   100% {
-    margin-right: 14vw;
+    padding-right: 60px;
   }
 }
 
-@-webkit-keyframes rotate {
+@-webkit-keyframes tourne {
   0% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
   }
 }
 
-@keyframes rotate {
+@keyframes tourne {
   0% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -207,10 +225,6 @@ body {
 }
 
 .outils {
-  overflow: hidden;
-}
-
-.menudetail {
   overflow: hidden;
 }
 
@@ -284,14 +298,20 @@ p {
   background-color: #e9ddf8;
 }
 
-@media only screen and (min-width: 761px) {
+@media only screen and (min-width: 660px) {
   .button__fonction {
     width: 43%;
     margin: 2vh 3vw 2vh 3vw;
   }
+  .button__page {
+    margin: auto;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 850px) {
   .button__fonction {
     width: 40%;
   }
@@ -391,7 +411,6 @@ p {
 
 .fa-heart__page {
   position: relative;
-  top: 4px;
 }
 
 .fa-heart__page::before {
@@ -461,7 +480,7 @@ a {
   color: black;
 }
 
-@media only screen and (min-width: 761px) {
+@media only screen and (min-width: 660px) {
   .cards {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -487,6 +506,21 @@ a {
   }
 }
 
+@media only screen and (min-width: 460px) {
+  .bottom__page {
+    height: 40vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 0% 80%;
+       object-position: 0% 80%;
+  }
+  .top__page {
+    height: 40vh;
+    -o-object-position: 0% 65%;
+       object-position: 0% 65%;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .card {
     width: 20vw;
@@ -497,6 +531,16 @@ a {
   .top {
     height: 12vw;
   }
+  .bottom__page {
+    height: 70vh;
+    -o-object-position: 0% 90%;
+       object-position: 0% 90%;
+  }
+  .top__page {
+    height: 70vh;
+    -o-object-position: 0% 65%;
+       object-position: 0% 65%;
+  }
 }
 
 .menu {
@@ -504,6 +548,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-bottom: 3vh;
 }
 
 .menu div {
@@ -665,7 +710,7 @@ a {
   color: #9356DC;
 }
 
-@media only screen and (min-width: 761px) {
+@media only screen and (min-width: 660px) {
   .fonction {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -750,7 +795,7 @@ footer {
   padding-top: 10px;
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 850px) {
   .footerlogo {
     display: block;
     margin-left: auto;
@@ -801,6 +846,7 @@ footer {
 .background {
   background-color: #eaeaea;
   overflow: hidden;
+  padding-bottom: 3vh;
 }
 
 .pagemaintitre {
@@ -812,7 +858,7 @@ footer {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: -8vh;
-  padding: 4vh 5vw 2vh 5vw;
+  padding: 4vh 7vw 2vh 7vw;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   background-color: #eaeaea;
@@ -822,12 +868,28 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: 5vw;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 7vw;
   margin-right: 5vw;
+}
+
+.entree {
+  width: 30%;
+  min-width: 390px;
+}
+
+.plat {
+  width: 30%;
+  min-width: 390px;
+}
+
+.dessert {
+  width: 30%;
+  min-width: 390px;
 }
 
 .h2__page {
@@ -839,14 +901,14 @@ footer {
 
 hr {
   margin: 0;
-  width: 12vw;
+  width: 12%;
   height: 3px;
   background-color: #99E2D0;
   border: none;
 }
 
 .h4__page {
-  font-size: 1.8em;
+  font-size: 2em;
   padding-bottom: 0.7vh;
 }
 
@@ -854,27 +916,7 @@ hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.menudetail {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
-  padding: 15px 10px 15px 10px;
-  background-color: white;
-  border-radius: 10px;
-  -webkit-box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
-          box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
+  padding-right: 2vw;
 }
 
 .menudetail__p {
@@ -884,7 +926,7 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 1.4em;
+  font-size: 1.6em;
   white-space: nowrap;
   text-overflow: ellipsis;
   padding-right: 15px;
@@ -894,24 +936,26 @@ hr {
   font-weight: bold;
 }
 
+.menudetail {
+  width: 90vw;
+  max-width: 390px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding: 15px 10px 15px 10px;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
+          box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
+}
+
 .menudetail:hover {
-  -webkit-animation: marge 0.8s ease-in-out both;
-          animation: marge 0.8s ease-in-out both;
+  -webkit-animation: pad 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+          animation: pad 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
 }
 
 .menudetail:hover + .menucoche {
-  -webkit-animation: slide-in-right 0.8s ease-in-out both;
-          animation: slide-in-right 0.8s ease-in-out both;
-}
-
-.menudetail:hover + .menucoche + .iconemenu {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-}
-
-.iconemenu {
-  -webkit-transition: 600ms ease-in-out 200ms;
-  transition: 600ms ease-in-out 200ms;
+  -webkit-animation: slide-in-right 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.975) both;
+          animation: slide-in-right 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.975) both;
 }
 
 .h4__page {
@@ -922,16 +966,25 @@ hr {
 
 .menucoche {
   opacity: 0;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
-  margin-right: -18vw;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-right: -60px;
   font-size: 2.3em;
   background-color: #99E2D0;
   color: white;
-  padding: 26px 20px;
+  padding: 27px 20px;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
-  -webkit-box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
-          box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
+}
+
+@media only screen and (min-width: 460px) {
+  .pagemaintitre {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .pagemenu__h1 {
+    margin-right: 9vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
